# tokyo-dl-reservation

./: .env.example  .gitignore  ARCHITECTURE.md  ARTIFACTS.md  CLAUDE.md  DECISIONS.md  DESIGN.md  LEARNINGS.md  LICENSE  OBSERVATIONS.md  README.md  RUNBOOK.md  STATUS.md  config.example.json  config.json  pyproject.toml
.compass/results/: 2026-05-08_calgetres-schema-discovery.json
.github/workflows/: check.yml
scripts/: probe_calgetres.py  run_poll.sh
src/dl_reservation/: booker.py  booking_state.py  codes.py  config.py  credentials.py  heartbeat.py  notifier.py  poll.py  snapshot.py  upstream.py
tests/: test_booker.py  test_booking_state.py  test_credentials.py  test_heartbeat.py  test_notifier.py  test_poll.py  test_snapshot.py
